--- a/KeyMagicDll/KeyMagicDll.rc
+++ b/KeyMagicDll/KeyMagicDll.rc
@@ -70,12 +70,12 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "FileDescription", "KeyMagic Dynamic Link Library"
-            VALUE "FileVersion", "1, 0, 0, 0"
+            VALUE "FileVersion", "1.0.0.0"
             VALUE "InternalName", "KeyMagic"
             VALUE "LegalCopyright", "Copyright (C) 2008"
             VALUE "OriginalFilename", "KeyMagic.dll"
             VALUE "ProductName", "KeyMagic"
-            VALUE "ProductVersion", "1, 0, 0, 0"
+            VALUE "ProductVersion", "1.0.0.0"
         END
     END
     BLOCK "VarFileInfo"
