Added Installer Files

--- a/NSIS/KeyMagic.ini
+++ b/NSIS/KeyMagic.ini
@@ -1,6 +1,23 @@
+
+
+;$NAME=$DISPLAYTEXT(TAB)$SHORTCUT
+
+;CTRL+ALT+SHIFT+(KEY)
 [KeyBoardPaths]
 Normal=NONE
+Parabaik=C:\KeyBoards\Parabaik.kmk
+Myanmar3=C:\KeyBoards\Myanmar3.kmk
+ZawGyi=C:\KeyBoards\ZawGyiKb.kmk
+UniBurma=C:\KeyBoards\UniBurma.kmk
 [MenuDisplays]
-Normal=Disable Keymagic
+Normal=Disable KeyMagic	F2
+Parabaik=Parabaik(DEMO)	CTRL+ALT+K
+Myanmar3=Myanmar3(DEMO)	CTRL+ALT+M
+ZawGyi=ZawGyi(DEMO)	CTRL+ALT+Z
+UniBurma=UniBurma(DEMO)	CTRL+ALT+U
 [ShortCuts]
-Normal=0
+Normal=113
+Parabaik=1611
+Myanmar3=1613
+ZawGyi=1626
+UniBurma=1621
