fix installer and other

--- a/KeyMagic/KeyMagic.rc
+++ b/KeyMagic/KeyMagic.rc
@@ -52,17 +52,16 @@ END
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 177, 88
+IDD_ABOUTBOX DIALOGEX 0, 0, 286, 196
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About KeyMagic"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDI_KEYMAGIC,IDC_STATIC,16,18,21,20
-    LTEXT           "KeyMagic",IDC_STATIC,43,18,39,8,SS_NOPREFIX
-    LTEXT           "Copyright (C) 2008  KeyMagic Project",IDC_STATIC,43,30,123,8
-    DEFPUSHBUTTON   "OK",IDOK,120,67,50,14,WS_GROUP
-    LTEXT           "keymagic.googlecode.com",IDC_STATIC,43,45,94,8
-    LTEXT           "Complie Info",IDC_COMPLIE,7,73,94,8,WS_DISABLED
+    LTEXT           "KeyMagic 1.2 Beta",IDC_STATIC,43,18,61,8,SS_NOPREFIX
+    DEFPUSHBUTTON   "OK",IDOK,229,175,50,14,WS_GROUP
+    LTEXT           "Complie Info",IDC_COMPLIE,7,181,94,8,WS_DISABLED
+    LTEXT           "ABOUT TEXT HERE",IDC_ATEXT,43,33,226,137
 END
 
 IDD_MAINBOX DIALOGEX 0, 0, 317, 220
@@ -100,10 +99,9 @@ BEGIN
     IDD_ABOUTBOX, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 170
-        VERTGUIDE, 82
+        RIGHTMARGIN, 279
         TOPMARGIN, 7
-        BOTTOMMARGIN, 81
+        BOTTOMMARGIN, 189
     END
 
     IDD_MAINBOX, DIALOG
