--- a/KeyMagic/KeyMagic.vcproj
+++ b/KeyMagic/KeyMagic.vcproj
@@ -135,6 +135,8 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="../Release/KeyMagicDll.lib msimg32.lib shlwapi.lib gdi32.lib Userenv.lib Advapi32.lib Comdlg32.lib shell32.lib kernel32.lib User32.lib psapi.lib $(NOINHERIT)"
 				LinkIncremental="1"
+				EnableUAC="true"
+				UACExecutionLevel="0"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
