--- a/NSIS/KeyMagic.ini
+++ b/NSIS/KeyMagic.ini
@@ -1,5 +1,5 @@
 [Settings]
-Startup=1
+Portable=0
 [KeyBoardPaths]
 Normal=NONE
 Parabaik=\KeyBoards\Parabaik.km2
@@ -7,14 +7,14 @@ Myanmar3=\KeyBoards\Myanmar3.km2
 UniBurma=\KeyBoards\UniBurma.km2
 Zawgyi=\KeyBoards\Zawgyi.km2
 [MenuDisplays]
-Normal=Normal
-Parabaik=Parabaik (unoffical)
-Myanmar3=Myanmar3 (unoffical)
-UniBurma=UniBurma (unoffical)
-Zawgyi=Zawgyi (unoffical)
+Normal=Disable Keymagic
+Parabaik=Parabaik (UnOffical)
+Myanmar3=Myanmar3 (UnOffical)
+UniBurma=UniBurma (UnOffical)
+Zawgyi=Zawgyi (UnOffical)
 [ShortCuts]
 Normal=0
-Parabaik=1616
-Myanmar3=1613
+Parabaik=0
+Myanmar3=0
 UniBurma=0
-Zawgyi=1626
+Zawgyi=0
