--- a/KeyMapper/KeyMapper.vcproj
+++ b/KeyMapper/KeyMapper.vcproj
@@ -41,6 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="&quot;C:\Program Files\TSE\Regular Expression Component Library Vc9\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -61,6 +62,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="&quot;C:\Program Files\TSE\Regular Expression Component Library Vc9\Lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -175,6 +177,10 @@
 				RelativePath=".\KeyMapper.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\regex.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -183,6 +189,18 @@
 			>
 			<File
 				RelativePath=".\KeyMapper.h"
+				>
+			</File>
+			<File
+				RelativePath=".\KParser.h"
+				>
+			</File>
+			<File
+				RelativePath=".\regex.h"
+				>
+			</File>
+			<File
+				RelativePath="C:\Program Files\TSE\Regular Expression Component Library Vc9\Include\RegularExpressionClass.h"
 				>
 			</File>
 			<File
