--- a/parser/parser.vcproj
+++ b/parser/parser.vcproj
@@ -190,6 +190,18 @@
 				>
 			</File>
 			<File
+				RelativePath=".\global.h"
+				>
+			</File>
+			<File
+				RelativePath=".\lexscanner.h"
+				>
+			</File>
+			<File
+				RelativePath=".\script.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
