Fixed to send exact VK_BACK and append text instead of deleting all and sending from the start

--- a/KeyMagicDll/KeyMagicDll.vcproj
+++ b/KeyMagicDll/KeyMagicDll.vcproj
@@ -212,6 +212,10 @@
 				RelativePath=".\KeyMagicDll.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\regex.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -236,6 +240,10 @@
 			</File>
 			<File
 				RelativePath=".\KeyMagicDll.h"
+				>
+			</File>
+			<File
+				RelativePath=".\regex.h"
 				>
 			</File>
 			<File
