--- a/parser/parser.vcproj
+++ b/parser/parser.vcproj
@@ -62,6 +62,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="shlwapi.lib"
 				LinkIncremental="2"
+				UACExecutionLevel="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -172,6 +173,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\global\global.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
@@ -190,11 +195,7 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\common.h"
-				>
-			</File>
-			<File
-				RelativePath=".\expregex.h"
+				RelativePath="..\global\global.h"
 				>
 			</File>
 			<File
@@ -211,10 +212,6 @@
 			</File>
 			<File
 				RelativePath=".\parser.h"
-				>
-			</File>
-			<File
-				RelativePath=".\rule.h"
 				>
 			</File>
 			<File
