Parser is now reporting parsing error, syntax error ....

--- a/parser/parser.vcproj
+++ b/parser/parser.vcproj
@@ -192,6 +192,10 @@
 				RelativePath=".\stdafx.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\UniConversion.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -228,6 +232,10 @@
 			</File>
 			<File
 				RelativePath=".\targetver.h"
+				>
+			</File>
+			<File
+				RelativePath=".\UniConversion.h"
 				>
 			</File>
 		</Filter>
