--- a/KeyMagic/KeyMagic.rc
+++ b/KeyMagic/KeyMagic.rc
@@ -199,7 +199,7 @@ IDB_BK                  BITMAP                  "Res\\bk.bmp"
 
 STRINGTABLE 
 BEGIN
-    IDS_EN_TITLE            "KeyMagic 1.3 (nightly)"
+    IDS_EN_TITLE            "KeyMagic 1.3 (Alpha 2)"
 END
 
 #endif    // English (U.S.) resources
