--- a/KeyMagic/KeyMagic.vcproj
+++ b/KeyMagic/KeyMagic.vcproj
@@ -21,7 +21,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			CharacterSet="0"
+			CharacterSet="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -100,7 +100,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			CharacterSet="0"
+			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
 			<Tool
@@ -130,6 +130,7 @@
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="1"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="3"
 			/>
 			<Tool
@@ -147,7 +148,7 @@
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;C:\Program Files\boost\boost_1_39\lib&quot;"
 				EnableUAC="true"
-				UACExecutionLevel="2"
+				UACExecutionLevel="1"
 				IgnoreAllDefaultLibraries="false"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -207,6 +208,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\StrTypeFunc.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\WndProc.cpp"
 				>
 			</File>
@@ -242,6 +247,10 @@
 			</File>
 			<File
 				RelativePath=".\Resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\StrTypeFunc.h"
 				>
 			</File>
 			<File
@@ -283,6 +292,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\Res\Parabaik20080421.ttf"
+			>
+		</File>
 		<File
 			RelativePath=".\ReadMe.txt"
 			>
