some function names changed. attempting to add debugBreak on keyboard layout.

--- a/parser/parser.vcproj
+++ b/parser/parser.vcproj
@@ -184,6 +184,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\demo.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\global\global.cpp"
 				>
 			</File>
