--- a/windows/Editor/kEditor/app.config
+++ b/windows/Editor/kEditor/app.config
@@ -62,6 +62,9 @@
   italic="False" /&gt;
 &lt;/Styles&gt;</value>
       </setting>
+      <setting name="LineNumber" serializeAs="String">
+        <value>True</value>
+      </setting>
     </kEditor.Properties.Settings>
   </userSettings>
 </configuration>
