--- a/windows/Editor/kEditor/app.config
+++ b/windows/Editor/kEditor/app.config
@@ -1,21 +1,17 @@
-﻿<configuration>
+<configuration>
   <configSections>
-    <sectionGroup name="userSettings"
-    type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
 
-      <section name="kEditor.Properties.Settings"
-      type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-      allowExeDefinition="MachineToLocalUser"
-      requirePermission="false" />
+      <section name="kEditor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <userSettings>
     <kEditor.Properties.Settings>
       <setting name="LastFilePath" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="RecentFiles" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="DefaultFontName" serializeAs="String">
         <value>Tahmoa</value>
@@ -36,6 +32,9 @@
         <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;Styles&gt;
   &lt;Style index="1" fontName="Segoe UI" fontSize="8"
+  foreColor="FF2D2DFF" backColor="FFFFFFFF" bold="False"
+  italic="False" /&gt;
+  &lt;Style index="4" fontName="Segoe UI" fontSize="8"
   foreColor="FF2D2DFF" backColor="FFFFFFFF" bold="False"
   italic="False" /&gt;
   &lt;Style index="5" fontName="Verdana" fontSize="8"
@@ -67,4 +66,4 @@
       </setting>
     </kEditor.Properties.Settings>
   </userSettings>
-</configuration>
+<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
